Some bigger changes and a rename.
Normal is now old, new is now normal.
The new script includes a bunch of new options including 2 more GC options, mostly untested, but feel free to report on your finding.